# playbook

./: .gitignore  CMakeLists.txt  README.md  playbook.cpp
alienio (playbook1)/: playbook1.cpp
header/: pbkinterprethandlers.h  pbkprojcreatorwriteout.h  pbkprojecthandler.h  playbookcore.h  playbookinterpreter.h  playbookmaster.h
legacy/playbook2/: playbook2.cpp
modules/: pbkenvironmentvariables.cpp  pbkinterprethandlers.cpp  pbkprojcreatorwriteout.cpp  pbkprojdebugerrorhandlers.cpp  pbkprojecthandler.cpp  playbookcore.cpp  playbookinterpreter.cpp
playbook2/: playbook2.cpp
playbook3/: playbook3.cpp
playbook4/: CMakeLists.txt  LICENSE  playbook4.cpp
playbook4/header/: pbkenvironmentvariables.h  pbkinterprethandlers.h  pbkprojdebugerrorhandlers.h  playbookcore.h  playbookinterpreter.h
playbook4/modules/: pbkenvironmentvariables.cpp  pbkinterprethandlers.cpp  pbkprojcreatorwriteout.cpp  pbkprojdebugerrorhandlers.cpp  pbkprojecthandler.cpp  playbookcore.cpp  playbookinterpreter.cpp
